@@ -1,0 +1,5 @@
+int test (char v1)
+{
+  v1 >>= 0xdebecced;
+  return v1;
+}
